Fixed T16, wrong width

--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -96,7 +96,7 @@ a:active {
 }
 
 .container {
-    width: 980px;
+    width: 960px;
     margin-left: auto;
     margin-right: auto;
 }
